# UDBMS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Server.cpp  Server.h  build_lex.sh  column.cpp  column.h  commands.y  config  constants.h  constraints.cpp  constraints.h  data_type.h  exceptions.h  main.cpp  names.l  storage_engine.cpp  storage_engine.h  table.cpp  table.h  tester
.github/workflows/: build.yml  main.yml
UDBMS_CLIENT/: CMakeLists.txt  Client.cpp  Client.h  Generator.cpp  Generator.h  buffer  config  main.cpp  tester  tests.cpp
api/: Cell.cpp  Cell.h  Column.cpp  Column.h  Constraints.cpp  Constraints.h  Cursor.cpp  Cursor.h  DataType.cpp  DataType.h  Row.cpp  Row.h  Table.cpp  Table.h  TableFileWorker.cpp  TableFileWorker.h  TableMetadata.cpp  TableMetadata.h  base_selector.cpp  base_selector.h  column.cpp  constraints.h  crud.cpp  crud.h  cursor.cpp  cursor.h  data_type.cpp  data_type.h  row.cpp  row.h  table.cpp  table.h
api/data_wrap/: BaseDataWrapper.cpp  BaseDataWrapper.h  YDBDataWrapper.cpp  YDBDataWrapper.h
engine/: storage_engine.cpp  storage_engine.h  table_data.cpp  table_data.h
logic/: show_create.cpp  show_create.h
parser/: commands.y  driver.cpp  driver.hpp  lexer.l  names.l  parser.yy  scanner.hpp
parser/condition/: Condition.cpp  Condition.h
parser/statement/: BaseStatement.cpp  BaseStatement.h  CreateStatement.cpp  CreateStatement.h  DeleteStatement.h  DropTableStatement.h  InsertStatement.h  SelectStatement.h  ShowCreateStatement.h  UpdateStatement.h  type_include.h
tests/: Create_table_input  Create_table_res  Create_table_sol  Create_table_tests.sh  Lexer_checker_res  Lexer_checker_sol  Lexer_tests  Lexer_tests.sh  Lexer_tests_input  Lexer_tests_sol  Other_tests  Other_tests.sh  config  fast_drop
tests/test_examples/: CRUD_test
